--- a/services/api-gateway/templates/episodes.html
+++ b/services/api-gateway/templates/episodes.html
@@ -22,6 +22,8 @@
                         <a href="/reviewer" class="text-gray-600 hover:text-gray-900">Reviewer</a>
                         <a href="/presenters" class="text-gray-600 hover:text-gray-900">Presenters</a>
                         <a href="/episodes" class="text-gray-900 font-semibold">Episodes</a>
+                        <a href="/news-feed" class="text-gray-600 hover:text-gray-900">News Feed</a>
+                        <a href="/collections" class="text-gray-600 hover:text-gray-900">Collections</a>
                     </div>
                 </div>
             </div>
