--- a/services/api-gateway/templates/groups.html
+++ b/services/api-gateway/templates/groups.html
@@ -21,7 +21,9 @@
                         <a href="/groups" class="text-gray-900 font-semibold">Groups</a>
                         <a href="/reviewer" class="text-gray-600 hover:text-gray-900">Reviewer</a>
                         <a href="/presenters" class="text-gray-600 hover:text-gray-900">Presenters</a>
-                        <a href="/api/episodes" class="text-gray-600 hover:text-gray-900">Episodes (JSON)</a>
+                        <a href="/episodes" class="text-gray-600 hover:text-gray-900">Episodes</a>
+                        <a href="/news-feed" class="text-gray-600 hover:text-gray-900">News Feed</a>
+                        <a href="/collections" class="text-gray-600 hover:text-gray-900">Collections</a>
                     </div>
                 </div>
             </div>
